[package]
name = "bthint"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Discord bot to remind users to use backticks"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.48"
config = "0.15.16"
futures = "0.3.31"
log = "0.4.28"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.225", features = ["derive"] }
serenity = {version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = {version = "1.47.1", features = ["full"]}
